OnboardingV2Minimal/force-app/main/default/objects/Org_Wide_Email__mdt/Org_Wide_Email__mdt.object-meta.xml
<CustomObject>
    <description
  >Custom metadata mirror of org-wide email addresses synchronized from OrgWideEmailAddress via OrgWideEmailSyncService. Keeps email sending options in sync with Salesforce org-wide email addresses, enabling onboarding communications and Vendor Program setup to reference valid From addresses without querying OrgWideEmailAddress directly. Example: An Org_Wide_Email metadata record with DeveloperName__c=&quot;Onboarding_Support&quot; and Email_Address__c=&quot;onboarding@company.com&quot; can be referenced by Communication_Template__c records or Vendor Program configuration. The sync process (OrgWideEmailSyncService) runs nightly to ensure this custom metadata stays in sync with source OrgWideEmailAddress records, preventing email send failures due to invalid or inactive addresses. Also synced to OrgWideEmail__c custom object for SOQL queries.</description>
    <label>Org Wide Email</label>
    <pluralLabel>Org Wide Emails</pluralLabel>
</CustomObject>