OnboardingV2Minimal/force-app/main/default/objects/Org_Wide_Email__mdt/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <description>Org Wide Email address</description>
    <label>Email Address</label>
    <type>Email</type>
</CustomField>