OnboardingV2Minimal/force-app/main/default/objects/Org_Wide_Email__mdt/fields/OrgWideEmailAddressId__c.field-meta.xml
<CustomField>
    <fullName>OrgWideEmailAddressId__c</fullName>
    <label>Org-Wide Email Address Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>